bottom section style done

--- a/routes/index.html
+++ b/routes/index.html
@@ -206,8 +206,7 @@
 					</article>
 					<form method="post">
 						<label for="sign-up" class="title1">SUBSCRIBE TO COMVERSE</label>
-						<input placeholder="user@gmail.com">
-						<button class="blue-bg" type="submit">SIGN UP</button>
+						<input placeholder="user@gmail.com"><button class="blue-bg" type="submit">SIGN UP</button>
 					</form>
 					<div id="social-imgs">
 						<img src="../img/social/socialMenuIcon-youtube.png" alt="social icon">
