solutions section style done except adding hovered images

--- a/routes/index.html
+++ b/routes/index.html
@@ -66,12 +66,12 @@
 				<div class="padding">
 					<h2 class="sec-title">WHAT CAN WE DO FOR YOU?</h2>
 					<nav class="main-nav">
-						<a href=""><img src="../img/solutions/solution_icon_smart-money.png" alt="solution money icon"><br>Data monetization</a>
-						<a href=""><img src="../img/solutions/comverse-logo.png" alt="comverse logo"><br>Machine to machine (M2M)</a>
-						<a href=""><img src="../img/solutions/ourSolutions-OOT-icon.png" alt="OTT icon"><br>Over-the-top (OTT)</a>
-						<a href=""><img src="../img/solutions/comverse-logo.png" alt="comverse logo"><br>Cloud computing</a>
-						<a href=""><img src="../img/solution/comverse-logo.png" alt="comverse logo"><br>Managed services</a>
-						<a href=""><img src="../img/solutions/comverse-logo.png" alt="comverse logo"><br>Social Media</a>
+						<a href=""><img src="../img/solutions/solution_icon_biz-analitics.png" alt="solution money icon"><br>Business Stimulating Analitics</a>
+						<a href=""><img src="../img/solutions/solution_icon_diti-cx.png" alt="comverse logo"><br>Digital Customer Experience</a>
+						<a href=""><img src="../img/solutions/solution_icon_smart-money.png" alt="OTT icon"><br>Smart Monetization</a>
+						<a href=""><img src="../img/solutions/solution_icon_optimize-efficnt.png" alt="comverse logo"><br>Optimization And Efficiency</a>
+						<a href=""><img src="../img/solutions/solution_icon_personal.png" alt="comverse logo"><br>Personalized Choice & Control</a>
+						<a href=""><img src="../img/solutions/solution_icon_biz-transform.png" alt="comverse logo"><br>Business Transformation</a>
 					</nav>
 				</div>
 				<div class="padding">
